--- a/AppAgendaJPro/build.gradle
+++ b/AppAgendaJPro/build.gradle
@@ -35,19 +35,12 @@ dependencies {
     implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa:2.5.2'
     implementation 'org.eclipse.persistence:org.eclipse.persistence.jpa.jpql:2.5.2' 
 
-    compile group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
-    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.15.2.0'
-    compile group: 'org.apache.derby', name: 'derbynet', version: '10.15.2.0'
-    compile('org.hibernate:hibernate-core:5.3.1.Final')
-
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 javafx {
     version = "11"
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics', 'javafx.media', 'javafx.web']
+    modules = ['javafx.controls','javafx.fxml','javafx.base','javafx.graphics','javafx.media','javafx.web']
 }
 
 /**
